--- a/index.html
+++ b/index.html
@@ -28,10 +28,8 @@
   </div>
 </header>
 
-
-
-  <!-- Hero Section (Updated) -->
-  <section class="hero">
+<!-- Hero Section -->
+<section class="hero">
   <div class="container hero-flex">
     <div class="hero-content">
       <div class="hero-label">SENIOR DESIGNER</div>
@@ -51,150 +49,140 @@
   </div>
 </section>
 
-
-  <!-- Selected Work -->
-  <section id="work" class="section">
-    <div class="container">
-      <h2>Check out my works!</h2>
-      <p>A few of the projects I’ve been working on recently.</p>
-
-      <div class="grid">
-
-        <!-- BusyBee – Productivity App -->
-        <article class="project">
-          <img src="Busybee_Cover.png" alt="BusyBee productivity app cover" />
-          <h3>BusyBee – Productivity App</h3>
-          <p>A bright, bee-themed productivity app that helps users organize tasks, manage time efficiently, and stay focused through a clean, friendly UI.</p>
-          <p class="tags">UI Design • Mobile App </p>
-          <a class="btn-pill" href="busybee.html">View case study →</a>
-        </article>
-
-        <!-- DigiBot – Application -->
-        <article class="project">
-          <img src="Digibot_Cover.png" alt="Digibot application cover" style="width:100%; border-radius:20px; margin-bottom:12px;" />
-          <h3>DigiBot - Creative Services</h3>
-          <p>A vibrant concept focused on digital creativity and collaboration, with a bold color palette and playful illustration-led UI.</p>
-          <p class="tags">UI Design • Web App</p>
-          <a class="btn-pill" href="digibot.html">View case study →</a>
-        </article>
-
-        <!-- UnaMarket – Seller’s Landing Page -->
-        <article class="project">
-          <img src="Unamarket_cover.png" alt="UnaMarket seller's landing page cover" style="width:100%; border-radius:20px; margin-bottom:12px;" />
-          <h3>UnaMarket – Seller's Page</h3>
-          <p>A Friendly marketplace landing page designed for onboarding sellers</p>
-          <p class="tags">UI Design • Landing Page</p>
-          <a class="btn-pill" href="Unamarket.html">View case study →</a>
-        </article>
-
-      </div>
-    </div>
-  </section>
-
-
-   <!-- Graphic Design Works -->
-<section class="work" id="graphic">
+<!-- Selected Work -->
+<section id="work" class="section">
   <div class="container">
-    <h2>Graphic Design Works</h2>
-    <p>A few selected visual and branding pieces.</p>
+    <h2>Check out my works!</h2>
+    <p>A few of the projects I’ve been working on recently.</p>
 
-    <div class="work-grid">
+    <div class="grid">
 
-      <!-- Card 1 -->
-      <article class="work-card">
-        <div class="work-cover">
-          <img src="GD_Thumb_01.png" alt="Graphic Design work 1" />
-        </div>
-        <h3>Social Media Campaign</h3>
-        <p>A set of playful, vibrant creatives designed for engagement and clarity.</p>
-        <p class="work-tags">Graphic Design • Social Media</p>
-        <a class="btn" href="#" target="_blank" rel="noopener">View work →</a>
+      <!-- BusyBee – Productivity App -->
+      <article class="project">
+        <img src="Busybee_Cover.png" alt="BusyBee productivity app cover" />
+        <h3>BusyBee – Productivity App</h3>
+        <p>A bright, bee-themed productivity app that helps users organize tasks, manage time efficiently, and stay focused through a clean, friendly UI.</p>
+        <p class="tags">UI Design • Mobile App</p>
+        <a class="btn-pill" href="busybee.html">View case study →</a>
       </article>
 
-      <!-- Card 2 -->
-      <article class="work-card">
-        <div class="work-cover">
-          <img src="GD_Thumb_02.png" alt="Graphic Design work 2" />
-        </div>
-        <h3>Brand Kit / Identity</h3>
-        <p>Logo, typography, and layout system built to feel friendly and consistent.</p>
-        <p class="work-tags">Branding • Identity</p>
-        <a class="btn" href="#" target="_blank" rel="noopener">View work →</a>
+      <!-- DigiBot – Application -->
+      <article class="project">
+        <img src="Digibot_Cover.png" alt="Digibot application cover" />
+        <h3>DigiBot - Creative Services</h3>
+        <p>A vibrant concept focused on digital creativity and collaboration, with a bold color palette and playful illustration-led UI.</p>
+        <p class="tags">UI Design • Web App</p>
+        <a class="btn-pill" href="digibot.html">View case study →</a>
       </article>
 
-      <!-- Card 3 -->
-      <article class="work-card">
-        <div class="work-cover">
-          <img src="GD_Thumb_03.png" alt="Graphic Design work 3" />
-        </div>
-        <h3>Packaging & Label</h3>
-        <p>Clean packaging design with clear hierarchy and shelf-ready visuals.</p>
-        <p class="work-tags">Graphic Design • Packaging</p>
-        <a class="btn" href="#" target="_blank" rel="noopener">View work →</a>
-      </article>
-
-      <!-- Card 4 -->
-      <article class="work-card">
-        <div class="work-cover">
-          <img src="GD_Thumb_04.png" alt="Graphic Design work 4" />
-        </div>
-        <h3>Posters / Prints</h3>
-        <p>Bold layout explorations for print—designed to feel fun and memorable.</p>
-        <p class="work-tags">Graphic Design • Print</p>
-        <a class="btn" href="#" target="_blank" rel="noopener">View work →</a>
+      <!-- UnaMarket – Seller’s Landing Page -->
+      <article class="project">
+        <img src="Unamarket_cover.png" alt="UnaMarket seller's landing page cover" />
+        <h3>UnaMarket – Seller's Page</h3>
+        <p>A Friendly marketplace landing page designed for onboarding sellers</p>
+        <p class="tags">UI Design • Landing Page</p>
+        <a class="btn-pill" href="Unamarket.html">View case study →</a>
       </article>
 
     </div>
   </div>
 </section>
 
+<!-- Graphic Design Works (FIXED to match your existing cards) -->
+<section id="graphic" class="section">
+  <div class="container">
+    <h2>Graphic Design Works</h2>
+    <p>A few selected visual and branding pieces.</p>
 
-  <!-- About -->
-  <section id="about" class="section">
-    <div class="container">
-      <h2>Hey there!</h2>
-      <h3><b>I’m Julia!</b></h3>
-      <p>I'm currently a Senior Designer with eight years of experience, I have a good track record working with international clients under different industries like Print, Digital Design, and Web design. Creativity has always been my comfort zone—it’s what pushed me to study Arts and Design and eventually turn it into a career.</p>
-      <p>I’ve always enjoyed exploring different corners of the design industry, learning and adapting as everything evolves. Right now I'm into Frontend development. And honestly, what makes me happiest is creating designs that feel clear and easy for people to use—work that makes them not notice the process they are in because they instantly get what they’re looking at or what they need to do.</p>
+    <div class="grid">
+
+      <!-- Graphic Card 1 -->
+      <article class="project">
+        <img src="GD_Thumb_01.png" alt="Graphic Design work 1" />
+        <h3>Social Media Campaign</h3>
+        <p>A set of playful, vibrant creatives designed for engagement and clarity.</p>
+        <p class="tags">Graphic Design • Social Media</p>
+        <a class="btn-pill" href="#" target="_blank" rel="noopener">View work →</a>
+      </article>
+
+      <!-- Graphic Card 2 -->
+      <article class="project">
+        <img src="GD_Thumb_02.png" alt="Graphic Design work 2" />
+        <h3>Brand Kit / Identity</h3>
+        <p>Logo, typography, and layout system built to feel friendly and consistent.</p>
+        <p class="tags">Branding • Identity</p>
+        <a class="btn-pill" href="#" target="_blank" rel="noopener">View work →</a>
+      </article>
+
+      <!-- Graphic Card 3 -->
+      <article class="project">
+        <img src="GD_Thumb_03.png" alt="Graphic Design work 3" />
+        <h3>Packaging & Label</h3>
+        <p>Clean packaging design with clear hierarchy and shelf-ready visuals.</p>
+        <p class="tags">Graphic Design • Packaging</p>
+        <a class="btn-pill" href="#" target="_blank" rel="noopener">View work →</a>
+      </article>
+
+      <!-- Graphic Card 4 -->
+      <article class="project">
+        <img src="GD_Thumb_04.png" alt="Graphic Design work 4" />
+        <h3>Posters / Prints</h3>
+        <p>Bold layout explorations for print—designed to feel fun and memorable.</p>
+        <p class="tags">Graphic Design • Print</p>
+        <a class="btn-pill" href="#" target="_blank" rel="noopener">View work →</a>
+      </article>
+
     </div>
-  </section>
+  </div>
+</section>
 
-  <!-- Contact -->
-  <section id="contact" class="section">
-    <div class="container">
-      <h2>Let’s work together!</h2>
-      <p>Open to freelance projects, collaborations, and full-time design opportunities.</p>
-      <ul class="links-list">
-        <li><a href="mailto:youremail@email.com">youremail@email.com</a></li>
-        <li><a href="#" target="_blank">Behance</a></li>
-        <li><a href="#" target="_blank">Dribbble</a></li>
-        <li><a href="#" target="_blank">Instagram</a></li>
-      </ul>
-    </div>
-  </section>
+<!-- About -->
+<section id="about" class="section">
+  <div class="container">
+    <h2>Hey there!</h2>
+    <h3><b>I’m Julia!</b></h3>
+    <p>I'm currently a Senior Designer with eight years of experience, I have a good track record working with international clients under different industries like Print, Digital Design, and Web design. Creativity has always been my comfort zone—it’s what pushed me to study Arts and Design and eventually turn it into a career.</p>
+    <p>I’ve always enjoyed exploring different corners of the design industry, learning and adapting as everything evolves. Right now I'm into Frontend development. And honestly, what makes me happiest is creating designs that feel clear and easy for people to use—work that makes them not notice the process they are in because they instantly get what they’re looking at or what they need to do.</p>
+  </div>
+</section>
 
-  <!-- Footer -->
-  <footer class="footer">
-    <p>© <span id="year"></span> Julia Jasmin Alix. All rights reserved.</p>
-  </footer>
+<!-- Contact -->
+<section id="contact" class="section">
+  <div class="container">
+    <h2>Let’s work together!</h2>
+    <p>Open to freelance projects, collaborations, and full-time design opportunities.</p>
+    <ul class="links-list">
+      <li><a href="mailto:youremail@email.com">youremail@email.com</a></li>
+      <li><a href="#" target="_blank" rel="noopener">Behance</a></li>
+      <li><a href="#" target="_blank" rel="noopener">Dribbble</a></li>
+      <li><a href="#" target="_blank" rel="noopener">Instagram</a></li>
+    </ul>
+  </div>
+</section>
 
-  <script>
-    document.getElementById("year").textContent = new Date().getFullYear();
+<!-- Footer -->
+<footer class="footer">
+  <p>© <span id="year"></span> Julia Jasmin Alix. All rights reserved.</p>
+</footer>
 
-    const cards = document.querySelectorAll(".project");
-    const observer = new IntersectionObserver(
-      (entries, obs) => {
-        entries.forEach((entry) => {
-          if (entry.isIntersecting) {
-            entry.target.classList.add("in-view");
-            obs.unobserve(entry.target);
-          }
-        });
-      },
-      { threshold: 0.2 }
-    );
-    cards.forEach((card) => observer.observe(card));
-  </script>
+<script>
+  document.getElementById("year").textContent = new Date().getFullYear();
+
+  // Animate BOTH your UI cards + Graphic cards (all use .project)
+  const cards = document.querySelectorAll(".project");
+  const observer = new IntersectionObserver(
+    (entries, obs) => {
+      entries.forEach((entry) => {
+        if (entry.isIntersecting) {
+          entry.target.classList.add("in-view");
+          obs.unobserve(entry.target);
+        }
+      });
+    },
+    { threshold: 0.2 }
+  );
+  cards.forEach((card) => observer.observe(card));
+</script>
 
 </body>
 </html>
