--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
       <!-- Graphic Card 1 -->
       <article class="project">
-        <img src="GD_Thumb_01.png" alt="Graphic Design work 1" />
+        <img src="Socmed.png" alt="Graphic Design work 1" />
         <h3>Social Media Campaign</h3>
         <p>A set of playful, vibrant creatives designed for engagement and clarity.</p>
         <p class="tags">Graphic Design • Social Media</p>
@@ -107,7 +107,7 @@
 
       <!-- Graphic Card 2 -->
       <article class="project">
-        <img src="GD_Thumb_02.png" alt="Graphic Design work 2" />
+        <img src="Brand Kit.png" alt="Graphic Design work 2" />
         <h3>Brand Kit / Identity</h3>
         <p>Logo, typography, and layout system built to feel friendly and consistent.</p>
         <p class="tags">Branding • Identity</p>
@@ -116,7 +116,7 @@
 
       <!-- Graphic Card 3 -->
       <article class="project">
-        <img src="GD_Thumb_03.png" alt="Graphic Design work 3" />
+        <img src="Packaging.png" alt="Graphic Design work 3" />
         <h3>Packaging & Label</h3>
         <p>Clean packaging design with clear hierarchy and shelf-ready visuals.</p>
         <p class="tags">Graphic Design • Packaging</p>
