--- a/index.html
+++ b/index.html
@@ -127,15 +127,31 @@
   </div>
 </section>
 
-<!-- About -->
-<section id="about" class="section">
-  <div class="container">
-    <h2>Hey there!</h2>
-    <h3><b>I’m Julia!</b></h3>
-    <p>I'm currently a Senior Designer with eight years of experience, I have a good track record working with international clients under different industries like Print, Digital Design, and Web design. Creativity has always been my comfort zone—it’s what pushed me to study Arts and Design and eventually turn it into a career.</p>
-    <p>I’ve always enjoyed exploring different corners of the design industry, learning and adapting as everything evolves. Right now I'm into Frontend development. And honestly, what makes me happiest is creating designs that feel clear and easy for people to use—work that makes them not notice the process they are in because they instantly get what they’re looking at or what they need to do.</p>
+<section class="about">
+  <div class="about-container">
+    
+    <!-- Text -->
+    <div class="about-text">
+      <h1>Hey there!</h1>
+      <h2>I’m Julia!</h2>
+
+      <p>
+        I'm currently a Senior Designer with eight years of experience. I have a strong track record working with international clients across Print, Digital, and Web Design. Creativity has always been my comfort zone—it’s what pushed me to study Arts and Design and eventually turn it into a career.
+      </p>
+
+      <p>
+        I’ve always enjoyed exploring different corners of the design industry, learning and adapting as everything evolves. Right now, I’m into Frontend development. What makes me happiest is creating designs that feel clear and easy to use—work that people instantly understand without having to think about the process.
+      </p>
+    </div>
+
+    <!-- Image -->
+    <div class="about-image">
+      <img src="images/about-julia.png" alt="Julia illustration">
+    </div>
+
   </div>
 </section>
+
 
 <!-- Contact -->
 <section id="contact" class="section">
