--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 </section>
 
 <section class="about">
-  <div class="about-container">
+   <div class="container about-container">
     
     <!-- Text -->
     <div class="about-text">
