--- a/marketing-banners.html
+++ b/marketing-banners.html
@@ -31,16 +31,21 @@
   </header>
 
   <!-- Hero Banner -->
-  <section class="mb-hero" aria-label="Marketing Banners hero">
-    <div class="mb-hero-bg" role="img" aria-label="Marketing banner header image"></div>
-    <div class="container mb-hero-inner">
-      <p class="mb-hero-kicker">Graphic Design Works</p>
-      <h1 class="mb-hero-title">Marketing Banners</h1>
-      <p class="mb-hero-sub">
-        A curated set of campaign creatives designed for clarity, engagement, and brand consistency.
-      </p>
+<section class="mb-hero" aria-label="Marketing Banners hero">
+  <div class="mb-hero-wrap">
+    <div class="mb-hero-grid">
+      <div class="mb-hero-copy">
+        <p class="mb-hero-kicker">Graphic Design Works</p>
+        <h1 class="mb-hero-title">Marketing Banners</h1>
+        <p class="mb-hero-sub">
+          A curated set of campaign creatives designed for clarity, engagement, and brand consistency.
+        </p>
+      </div>
+
+      <div class="mb-hero-visual" role="img" aria-label="Marketing header banner"></div>
     </div>
-  </section>
+  </div>
+</section>
 
   <!-- Page Content -->
   <main class="mb-main" id="gallery">
