--- a/marketing-banners.html
+++ b/marketing-banners.html
@@ -3,22 +3,21 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Marketing Banners | Julia Alix</title>
+  <title>Marketing Designs | Julia Alix</title>
 
-  <!-- Your existing global styles -->
+  <!-- Global styles -->
   <link rel="stylesheet" href="styles.css" />
-
-  <!-- Page-specific (small + safe) overrides -->
+  <!-- Page-specific styles -->
   <link rel="stylesheet" href="marketing-banners.css" />
 </head>
 
 <body>
 
-  <!-- Header (keeps your existing vibe) -->
+  <!-- Header -->
   <header class="site-header">
     <div class="container header-inner">
       <a class="logo" href="index.html" aria-label="Back to home">
-        <span class="logo-mark">✦</span>
+        <span class="logo-mark">☾</span>
         <span class="logo-text">Julia Alix</span>
       </a>
 
@@ -30,203 +29,212 @@
     </div>
   </header>
 
-  <!-- Hero Banner -->
-<section class="mb-hero" aria-label="Marketing Banners hero">
-  <div class="mb-hero-wrap">
-    <div class="mb-hero-grid">
-      <div class="mb-hero-copy">
-        <p class="mb-hero-kicker">Graphic Design Works</p>
-        <h1 class="mb-hero-title">Marketing Banners</h1>
-        <p class="mb-hero-sub">
-          A curated set of campaign creatives designed for clarity, engagement, and brand consistency.
-        </p>
+  <!-- HERO (Landing-page style) -->
+  <main>
+    <section class="mb-landing-hero" aria-label="Marketing Designs hero">
+      <div class="container mb-landing-hero-inner">
+
+        <div class="mb-landing-hero-copy">
+          <p class="mb-landing-kicker">SENIOR DESIGNER</p>
+
+          <h1 class="mb-landing-title">
+            Marketing Designs
+          </h1>
+
+          <p class="mb-landing-sub">
+            A curated set of campaign creatives designed for clarity, engagement, and brand consistency.
+          </p>
+        </div>
+
+        <div class="mb-landing-hero-visual" aria-label="Avatar preview">
+          <div class="mb-landing-card">
+            <img
+              class="mb-landing-avatar"
+              src="SOCIALMEDIA_AVATAR.png"
+              alt="Julia Alix avatar"
+              loading="eager"
+            />
+          </div>
+        </div>
+
       </div>
+    </section>
 
-      <div class="mb-hero-visual" role="img" aria-label="Marketing header banner"></div>
-    </div>
-  </div>
-</section>
+    <!-- Page Content -->
+    <section class="mb-main" id="gallery">
+      <div class="container">
 
-  <!-- Page Content -->
-  <main class="mb-main" id="gallery">
-    <div class="container">
+        <!-- SECTION 1 -->
+        <section class="mb-section">
+          <header class="mb-section-head">
+            <div>
+              <h2 class="mb-section-title">Euroffice UK</h2>
+              <p class="mb-section-sub">LinkedIn Campaigns (B2C)</p>
+            </div>
+          </header>
 
-      <!-- SECTION 1 -->
-      <section class="mb-section">
-        <header class="mb-section-head">
-          <div>
-            <h2 class="mb-section-title">Euroffice UK</h2>
-            <p class="mb-section-sub">LinkedIn Campaigns (B2C)</p>
+          <div class="mb-grid">
+            <article class="mb-card">
+              <div class="mb-card-top">
+                <h3 class="mb-card-title">Page Posts</h3>
+                <div class="mb-card-controls" aria-label="Carousel controls">
+                  <button class="mb-iconbtn" type="button" data-carousel-prev aria-label="Previous">‹</button>
+                  <button class="mb-iconbtn" type="button" data-carousel-next aria-label="Next">›</button>
+                </div>
+              </div>
+
+              <div class="mb-carousel" data-carousel>
+                <div class="mb-track">
+                  <img class="mb-slide" src="EOUK_POST_1.png" alt="Euroffice UK page post creative 1" />
+                  <img class="mb-slide" src="EOUK_POST_2.png" alt="Euroffice UK page post creative 2" />
+                </div>
+                <div class="mb-dots" aria-hidden="true">
+                  <span class="mb-dot is-active"></span>
+                  <span class="mb-dot"></span>
+                </div>
+              </div>
+            </article>
+
+            <article class="mb-card">
+              <div class="mb-card-top">
+                <h3 class="mb-card-title">Page Posts</h3>
+                <div class="mb-card-controls" aria-label="Carousel controls">
+                  <button class="mb-iconbtn" type="button" data-carousel-prev aria-label="Previous">‹</button>
+                  <button class="mb-iconbtn" type="button" data-carousel-next aria-label="Next">›</button>
+                </div>
+              </div>
+
+              <!-- Reusing the same pair so it still behaves like your mock -->
+              <div class="mb-carousel" data-carousel>
+                <div class="mb-track">
+                  <img class="mb-slide" src="EOUK_POST_1.png" alt="Euroffice UK page post creative 1 duplicate" />
+                  <img class="mb-slide" src="EOUK_POST_2.png" alt="Euroffice UK page post creative 2 duplicate" />
+                </div>
+                <div class="mb-dots" aria-hidden="true">
+                  <span class="mb-dot is-active"></span>
+                  <span class="mb-dot"></span>
+                </div>
+              </div>
+            </article>
           </div>
-        </header>
+        </section>
 
-        <div class="mb-grid">
-          <!-- Card 1 -->
-          <article class="mb-card">
-            <div class="mb-card-top">
-              <h3 class="mb-card-title">Page Posts</h3>
-              <div class="mb-card-controls" aria-label="Carousel controls">
-                <button class="mb-iconbtn" type="button" data-carousel-prev aria-label="Previous">‹</button>
-                <button class="mb-iconbtn" type="button" data-carousel-next aria-label="Next">›</button>
-              </div>
+        <!-- SECTION 2 -->
+        <section class="mb-section">
+          <header class="mb-section-head">
+            <div>
+              <h2 class="mb-section-title">Office Power UK</h2>
+              <p class="mb-section-sub">Facebook Campaigns (B2B)</p>
             </div>
+          </header>
 
-            <div class="mb-carousel" data-carousel>
-              <div class="mb-track">
-                <img class="mb-slide" src="Page%20Posts%20Frame-1.png" alt="Euroffice UK page post creative 1" />
-                <img class="mb-slide" src="Page%20Posts%20Frame-2.png" alt="Euroffice UK page post creative 2" />
+          <div class="mb-grid">
+            <article class="mb-card">
+              <div class="mb-card-top">
+                <h3 class="mb-card-title">Page Posts</h3>
+                <div class="mb-card-controls" aria-label="Carousel controls">
+                  <button class="mb-iconbtn" type="button" data-carousel-prev aria-label="Previous">‹</button>
+                  <button class="mb-iconbtn" type="button" data-carousel-next aria-label="Next">›</button>
+                </div>
               </div>
 
-              <div class="mb-dots" aria-hidden="true">
-                <span class="mb-dot is-active"></span>
-                <span class="mb-dot"></span>
+              <div class="mb-carousel" data-carousel>
+                <div class="mb-track">
+                  <img class="mb-slide" src="OFFICEPOWER_POST_1.png" alt="Office Power UK creative 1" />
+                  <img class="mb-slide" src="OFFICEPOWER_POST_2.png" alt="Office Power UK creative 2" />
+                </div>
+                <div class="mb-dots" aria-hidden="true">
+                  <span class="mb-dot is-active"></span>
+                  <span class="mb-dot"></span>
+                </div>
               </div>
-            </div>
-          </article>
+            </article>
 
-          <!-- Card 2 -->
-          <article class="mb-card">
-            <div class="mb-card-top">
-              <h3 class="mb-card-title">Page Posts</h3>
-              <div class="mb-card-controls" aria-label="Carousel controls">
-                <button class="mb-iconbtn" type="button" data-carousel-prev aria-label="Previous">‹</button>
-                <button class="mb-iconbtn" type="button" data-carousel-next aria-label="Next">›</button>
-              </div>
-            </div>
-
-            <div class="mb-carousel" data-carousel>
-              <div class="mb-track">
-                <img class="mb-slide" src="Page%20Posts%20Frame-3.png" alt="Euroffice UK page post creative 3" />
-                <img class="mb-slide" src="Page%20Posts%20Frame-4.png" alt="Euroffice UK page post creative 4" />
+            <article class="mb-card">
+              <div class="mb-card-top">
+                <h3 class="mb-card-title">Page Posts</h3>
+                <div class="mb-card-controls" aria-label="Carousel controls">
+                  <button class="mb-iconbtn" type="button" data-carousel-prev aria-label="Previous">‹</button>
+                  <button class="mb-iconbtn" type="button" data-carousel-next aria-label="Next">›</button>
+                </div>
               </div>
 
-              <div class="mb-dots" aria-hidden="true">
-                <span class="mb-dot is-active"></span>
-                <span class="mb-dot"></span>
+              <!-- Reusing the same pair -->
+              <div class="mb-carousel" data-carousel>
+                <div class="mb-track">
+                  <img class="mb-slide" src="OFFICEPOWER_POST_1.png" alt="Office Power UK creative 1 duplicate" />
+                  <img class="mb-slide" src="OFFICEPOWER_POST_2.png" alt="Office Power UK creative 2 duplicate" />
+                </div>
+                <div class="mb-dots" aria-hidden="true">
+                  <span class="mb-dot is-active"></span>
+                  <span class="mb-dot"></span>
+                </div>
               </div>
-            </div>
-          </article>
-        </div>
-      </section>
-
-      <!-- SECTION 2 -->
-      <section class="mb-section">
-        <header class="mb-section-head">
-          <div>
-            <h2 class="mb-section-title">Office Power UK</h2>
-            <p class="mb-section-sub">Facebook Campaigns (B2B)</p>
+            </article>
           </div>
-        </header>
+        </section>
 
-        <div class="mb-grid">
-          <article class="mb-card">
-            <div class="mb-card-top">
-              <h3 class="mb-card-title">Page Posts</h3>
-              <div class="mb-card-controls" aria-label="Carousel controls">
-                <button class="mb-iconbtn" type="button" data-carousel-prev aria-label="Previous">‹</button>
-                <button class="mb-iconbtn" type="button" data-carousel-next aria-label="Next">›</button>
-              </div>
+        <!-- SECTION 3 -->
+        <section class="mb-section">
+          <header class="mb-section-head">
+            <div>
+              <h2 class="mb-section-title">Unamarket &amp; Amazon</h2>
+              <p class="mb-section-sub">Instagram Campaign Launch</p>
             </div>
+          </header>
 
-            <div class="mb-carousel" data-carousel>
-              <div class="mb-track">
-                <img class="mb-slide" src="Page%20Posts%20Frame-5.png" alt="Office Power UK creative 1" />
-                <img class="mb-slide" src="Page%20Posts%20Frame.png" alt="Office Power UK creative 2" />
+          <div class="mb-grid">
+            <article class="mb-card">
+              <div class="mb-card-top">
+                <h3 class="mb-card-title">Page Posts</h3>
+                <div class="mb-card-controls" aria-label="Carousel controls">
+                  <button class="mb-iconbtn" type="button" data-carousel-prev aria-label="Previous">‹</button>
+                  <button class="mb-iconbtn" type="button" data-carousel-next aria-label="Next">›</button>
+                </div>
               </div>
 
-              <div class="mb-dots" aria-hidden="true">
-                <span class="mb-dot is-active"></span>
-                <span class="mb-dot"></span>
+              <div class="mb-carousel" data-carousel>
+                <div class="mb-track">
+                  <img class="mb-slide" src="UNAMARKET_POST_1.png" alt="Unamarket & Amazon creative 1" />
+                  <img class="mb-slide" src="UNAMARKET_POST_2.png" alt="Unamarket & Amazon creative 2" />
+                </div>
+                <div class="mb-dots" aria-hidden="true">
+                  <span class="mb-dot is-active"></span>
+                  <span class="mb-dot"></span>
+                </div>
               </div>
-            </div>
-          </article>
+            </article>
 
-          <article class="mb-card">
-            <div class="mb-card-top">
-              <h3 class="mb-card-title">Page Posts</h3>
-              <div class="mb-card-controls" aria-label="Carousel controls">
-                <button class="mb-iconbtn" type="button" data-carousel-prev aria-label="Previous">‹</button>
-                <button class="mb-iconbtn" type="button" data-carousel-next aria-label="Next">›</button>
-              </div>
-            </div>
-
-            <!-- reusing frames so layout matches your mock -->
-            <div class="mb-carousel" data-carousel>
-              <div class="mb-track">
-                <img class="mb-slide" src="Page%20Posts%20Frame-2.png" alt="Office Power UK creative 3" />
-                <img class="mb-slide" src="Page%20Posts%20Frame-4.png" alt="Office Power UK creative 4" />
+            <article class="mb-card">
+              <div class="mb-card-top">
+                <h3 class="mb-card-title">Page Posts</h3>
+                <div class="mb-card-controls" aria-label="Carousel controls">
+                  <button class="mb-iconbtn" type="button" data-carousel-prev aria-label="Previous">‹</button>
+                  <button class="mb-iconbtn" type="button" data-carousel-next aria-label="Next">›</button>
+                </div>
               </div>
 
-              <div class="mb-dots" aria-hidden="true">
-                <span class="mb-dot is-active"></span>
-                <span class="mb-dot"></span>
+              <!-- Reusing the same pair -->
+              <div class="mb-carousel" data-carousel>
+                <div class="mb-track">
+                  <img class="mb-slide" src="UNAMARKET_POST_1.png" alt="Unamarket & Amazon creative 1 duplicate" />
+                  <img class="mb-slide" src="UNAMARKET_POST_2.png" alt="Unamarket & Amazon creative 2 duplicate" />
+                </div>
+                <div class="mb-dots" aria-hidden="true">
+                  <span class="mb-dot is-active"></span>
+                  <span class="mb-dot"></span>
+                </div>
               </div>
-            </div>
-          </article>
-        </div>
-      </section>
-
-      <!-- SECTION 3 -->
-      <section class="mb-section">
-        <header class="mb-section-head">
-          <div>
-            <h2 class="mb-section-title">UnaMarket</h2>
-            <p class="mb-section-sub">Instagram Campaign Launch</p>
+            </article>
           </div>
-        </header>
+        </section>
 
-        <div class="mb-grid">
-          <article class="mb-card">
-            <div class="mb-card-top">
-              <h3 class="mb-card-title">Page Posts</h3>
-              <div class="mb-card-controls" aria-label="Carousel controls">
-                <button class="mb-iconbtn" type="button" data-carousel-prev aria-label="Previous">‹</button>
-                <button class="mb-iconbtn" type="button" data-carousel-next aria-label="Next">›</button>
-              </div>
-            </div>
+        <footer class="mb-footer">
+          <p>© Julia Jasmin Alix. All rights reserved.</p>
+        </footer>
 
-            <div class="mb-carousel" data-carousel>
-              <div class="mb-track">
-                <img class="mb-slide" src="Page%20Posts%20Frame-1.png" alt="UnaMarket creative 1" />
-                <img class="mb-slide" src="Page%20Posts%20Frame-3.png" alt="UnaMarket creative 2" />
-              </div>
-
-              <div class="mb-dots" aria-hidden="true">
-                <span class="mb-dot is-active"></span>
-                <span class="mb-dot"></span>
-              </div>
-            </div>
-          </article>
-
-          <article class="mb-card">
-            <div class="mb-card-top">
-              <h3 class="mb-card-title">Page Posts</h3>
-              <div class="mb-card-controls" aria-label="Carousel controls">
-                <button class="mb-iconbtn" type="button" data-carousel-prev aria-label="Previous">‹</button>
-                <button class="mb-iconbtn" type="button" data-carousel-next aria-label="Next">›</button>
-              </div>
-            </div>
-
-            <div class="mb-carousel" data-carousel>
-              <div class="mb-track">
-                <img class="mb-slide" src="Page%20Posts%20Frame-4.png" alt="UnaMarket creative 3" />
-                <img class="mb-slide" src="Page%20Posts%20Frame-5.png" alt="UnaMarket creative 4" />
-              </div>
-
-              <div class="mb-dots" aria-hidden="true">
-                <span class="mb-dot is-active"></span>
-                <span class="mb-dot"></span>
-              </div>
-            </div>
-          </article>
-        </div>
-      </section>
-
-      <footer class="mb-footer">
-        <p>© Julia Jasmin Alix. All rights reserved.</p>
-      </footer>
-
-    </div>
+      </div>
+    </section>
   </main>
 
   <!-- Tiny carousel script -->
@@ -246,7 +254,6 @@
           index = clamp(to, 0, slides.length - 1);
           const slideWidth = slides[0].getBoundingClientRect().width;
           track.style.transform = `translateX(${-index * slideWidth}px)`;
-
           dots.forEach((d, i) => d.classList.toggle("is-active", i === index));
         }
 
@@ -256,7 +263,6 @@
         prev?.addEventListener("click", () => go(index - 1));
         next?.addEventListener("click", () => go(index + 1));
 
-        // swipe-ish (drag)
         let startX = null;
         track.addEventListener("pointerdown", (e) => {
           startX = e.clientX;
@@ -266,16 +272,14 @@
           if (startX == null) return;
           const dx = e.clientX - startX;
           startX = null;
-
           if (Math.abs(dx) > 40) go(index + (dx < 0 ? 1 : -1));
         });
 
-        // resize-safe
         window.addEventListener("resize", () => go(index));
-
         go(0);
       });
     })();
   </script>
+
 </body>
 </html>
