--- a/marketing-banners.html
+++ b/marketing-banners.html
@@ -85,7 +85,7 @@
 
               <div class="mb-carousel" data-carousel>
                 <div class="mb-track">
-                  <img class="mb-slide" src="EOUK_POST_1.png" alt="Euroffice UK page post creative 1" />
+                  <img class="mb-slide" src="EOUK_POSTING.png" alt="Euroffice UK page post creative 1" />
                   <img class="mb-slide" src="EOUK_POST_2.png" alt="Euroffice UK page post creative 2" />
                 </div>
                 <div class="mb-dots" aria-hidden="true">
@@ -107,7 +107,7 @@
               <!-- Reusing the same pair so it still behaves like your mock -->
               <div class="mb-carousel" data-carousel>
                 <div class="mb-track">
-                  <img class="mb-slide" src="EOUK_POST_1.png" alt="Euroffice UK page post creative 1 duplicate" />
+                  <img class="mb-slide" src="EOUK_POSTING.png" alt="Euroffice UK page post creative 1 duplicate" />
                   <img class="mb-slide" src="EOUK_POST_2.png" alt="Euroffice UK page post creative 2 duplicate" />
                 </div>
                 <div class="mb-dots" aria-hidden="true">
@@ -140,7 +140,7 @@
 
               <div class="mb-carousel" data-carousel>
                 <div class="mb-track">
-                  <img class="mb-slide" src="OFFICEPOWER_POST_1.png" alt="Office Power UK creative 1" />
+                  <img class="mb-slide" src="OFFICEPOWER_POSTING.png" alt="Office Power UK creative 1" />
                   <img class="mb-slide" src="OFFICEPOWER_POST_2.png" alt="Office Power UK creative 2" />
                 </div>
                 <div class="mb-dots" aria-hidden="true">
@@ -162,7 +162,7 @@
               <!-- Reusing the same pair -->
               <div class="mb-carousel" data-carousel>
                 <div class="mb-track">
-                  <img class="mb-slide" src="OFFICEPOWER_POST_1.png" alt="Office Power UK creative 1 duplicate" />
+                  <img class="mb-slide" src="OFFICEPOWER_POSTING.png" alt="Office Power UK creative 1 duplicate" />
                   <img class="mb-slide" src="OFFICEPOWER_POST_2.png" alt="Office Power UK creative 2 duplicate" />
                 </div>
                 <div class="mb-dots" aria-hidden="true">
@@ -195,7 +195,7 @@
 
               <div class="mb-carousel" data-carousel>
                 <div class="mb-track">
-                  <img class="mb-slide" src="UNAMARKET_POST_1.png" alt="Unamarket & Amazon creative 1" />
+                  <img class="mb-slide" src="UNAMARKET_POSTING.png alt="Unamarket & Amazon creative 1" />
                   <img class="mb-slide" src="UNAMARKET_POST_2.png" alt="Unamarket & Amazon creative 2" />
                 </div>
                 <div class="mb-dots" aria-hidden="true">
@@ -217,7 +217,7 @@
               <!-- Reusing the same pair -->
               <div class="mb-carousel" data-carousel>
                 <div class="mb-track">
-                  <img class="mb-slide" src="UNAMARKET_POST_1.png" alt="Unamarket & Amazon creative 1 duplicate" />
+                  <img class="mb-slide" src="UNAMARKET_POSTING.png" alt="Unamarket & Amazon creative 1 duplicate" />
                   <img class="mb-slide" src="UNAMARKET_POST_2.png" alt="Unamarket & Amazon creative 2 duplicate" />
                 </div>
                 <div class="mb-dots" aria-hidden="true">
