--- a/marketing-banners.html
+++ b/marketing-banners.html
@@ -5,9 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Marketing Designs | Julia Alix</title>
 
-  <!-- Global styles -->
   <link rel="stylesheet" href="styles.css" />
-  <!-- Page-specific styles -->
   <link rel="stylesheet" href="marketing-banners.css" />
 </head>
 
@@ -29,7 +27,7 @@
     </div>
   </header>
 
-  <!-- HERO (Landing-page style) -->
+  <!-- HERO -->
   <main>
     <section class="mb-landing-hero" aria-label="Marketing Designs hero">
       <div class="container mb-landing-hero-inner">
@@ -46,7 +44,7 @@
           </p>
         </div>
 
-        <div class="mb-landing-hero-visual" aria-label="Avatar preview">
+        <div class="mb-landing-hero-visual">
           <div class="mb-landing-card">
             <img
               class="mb-landing-avatar"
@@ -60,7 +58,7 @@
       </div>
     </section>
 
-    <!-- Page Content -->
+    <!-- PAGE CONTENT -->
     <section class="mb-main" id="gallery">
       <div class="container">
 
@@ -74,21 +72,22 @@
           </header>
 
           <div class="mb-grid">
+
             <article class="mb-card">
               <div class="mb-card-top">
                 <h3 class="mb-card-title">Page Posts</h3>
-                <div class="mb-card-controls" aria-label="Carousel controls">
-                  <button class="mb-iconbtn" type="button" data-carousel-prev aria-label="Previous">‹</button>
-                  <button class="mb-iconbtn" type="button" data-carousel-next aria-label="Next">›</button>
+                <div class="mb-card-controls">
+                  <button class="mb-iconbtn" type="button" data-carousel-prev>‹</button>
+                  <button class="mb-iconbtn" type="button" data-carousel-next>›</button>
                 </div>
               </div>
 
               <div class="mb-carousel" data-carousel>
                 <div class="mb-track">
-                  <img class="mb-slide" src="EOUK_POSTING.png" alt="Euroffice UK page post creative 1" />
-                  <img class="mb-slide" src="EOUK_POST_2.png" alt="Euroffice UK page post creative 2" />
+                  <img class="mb-slide" src="EOUK_POSTING.png" alt="Euroffice UK creative 1" />
+                  <img class="mb-slide" src="EOUK_POST_2.png" alt="Euroffice UK creative 2" />
                 </div>
-                <div class="mb-dots" aria-hidden="true">
+                <div class="mb-dots">
                   <span class="mb-dot is-active"></span>
                   <span class="mb-dot"></span>
                 </div>
@@ -98,24 +97,24 @@
             <article class="mb-card">
               <div class="mb-card-top">
                 <h3 class="mb-card-title">Page Posts</h3>
-                <div class="mb-card-controls" aria-label="Carousel controls">
-                  <button class="mb-iconbtn" type="button" data-carousel-prev aria-label="Previous">‹</button>
-                  <button class="mb-iconbtn" type="button" data-carousel-next aria-label="Next">›</button>
+                <div class="mb-card-controls">
+                  <button class="mb-iconbtn" type="button" data-carousel-prev>‹</button>
+                  <button class="mb-iconbtn" type="button" data-carousel-next>›</button>
                 </div>
               </div>
 
-              <!-- Reusing the same pair so it still behaves like your mock -->
               <div class="mb-carousel" data-carousel>
                 <div class="mb-track">
-                  <img class="mb-slide" src="EOUK_POSTING.png" alt="Euroffice UK page post creative 1 duplicate" />
-                  <img class="mb-slide" src="EOUK_POST_2.png" alt="Euroffice UK page post creative 2 duplicate" />
+                  <img class="mb-slide" src="EOUK_POSTING.png" alt="Euroffice UK creative 1 duplicate" />
+                  <img class="mb-slide" src="EOUK_POST_2.png" alt="Euroffice UK creative 2 duplicate" />
                 </div>
-                <div class="mb-dots" aria-hidden="true">
+                <div class="mb-dots">
                   <span class="mb-dot is-active"></span>
                   <span class="mb-dot"></span>
                 </div>
               </div>
             </article>
+
           </div>
         </section>
 
@@ -129,12 +128,13 @@
           </header>
 
           <div class="mb-grid">
+
             <article class="mb-card">
               <div class="mb-card-top">
                 <h3 class="mb-card-title">Page Posts</h3>
-                <div class="mb-card-controls" aria-label="Carousel controls">
-                  <button class="mb-iconbtn" type="button" data-carousel-prev aria-label="Previous">‹</button>
-                  <button class="mb-iconbtn" type="button" data-carousel-next aria-label="Next">›</button>
+                <div class="mb-card-controls">
+                  <button class="mb-iconbtn" type="button" data-carousel-prev>‹</button>
+                  <button class="mb-iconbtn" type="button" data-carousel-next>›</button>
                 </div>
               </div>
 
@@ -143,7 +143,7 @@
                   <img class="mb-slide" src="OFFICEPOWER_POSTING.png" alt="Office Power UK creative 1" />
                   <img class="mb-slide" src="OFFICEPOWER_POST_2.png" alt="Office Power UK creative 2" />
                 </div>
-                <div class="mb-dots" aria-hidden="true">
+                <div class="mb-dots">
                   <span class="mb-dot is-active"></span>
                   <span class="mb-dot"></span>
                 </div>
@@ -153,24 +153,24 @@
             <article class="mb-card">
               <div class="mb-card-top">
                 <h3 class="mb-card-title">Page Posts</h3>
-                <div class="mb-card-controls" aria-label="Carousel controls">
-                  <button class="mb-iconbtn" type="button" data-carousel-prev aria-label="Previous">‹</button>
-                  <button class="mb-iconbtn" type="button" data-carousel-next aria-label="Next">›</button>
+                <div class="mb-card-controls">
+                  <button class="mb-iconbtn" type="button" data-carousel-prev>‹</button>
+                  <button class="mb-iconbtn" type="button" data-carousel-next>›</button>
                 </div>
               </div>
 
-              <!-- Reusing the same pair -->
               <div class="mb-carousel" data-carousel>
                 <div class="mb-track">
                   <img class="mb-slide" src="OFFICEPOWER_POSTING.png" alt="Office Power UK creative 1 duplicate" />
                   <img class="mb-slide" src="OFFICEPOWER_POST_2.png" alt="Office Power UK creative 2 duplicate" />
                 </div>
-                <div class="mb-dots" aria-hidden="true">
+                <div class="mb-dots">
                   <span class="mb-dot is-active"></span>
                   <span class="mb-dot"></span>
                 </div>
               </div>
             </article>
+
           </div>
         </section>
 
@@ -184,21 +184,22 @@
           </header>
 
           <div class="mb-grid">
+
             <article class="mb-card">
               <div class="mb-card-top">
                 <h3 class="mb-card-title">Page Posts</h3>
-                <div class="mb-card-controls" aria-label="Carousel controls">
-                  <button class="mb-iconbtn" type="button" data-carousel-prev aria-label="Previous">‹</button>
-                  <button class="mb-iconbtn" type="button" data-carousel-next aria-label="Next">›</button>
+                <div class="mb-card-controls">
+                  <button class="mb-iconbtn" type="button" data-carousel-prev>‹</button>
+                  <button class="mb-iconbtn" type="button" data-carousel-next>›</button>
                 </div>
               </div>
 
               <div class="mb-carousel" data-carousel>
                 <div class="mb-track">
-                  <img class="mb-slide" src="UNAMARKET_POSTING.png alt="Unamarket & Amazon creative 1" />
-                  <img class="mb-slide" src="UNAMARKET_POST_2.png" alt="Unamarket & Amazon creative 2" />
+                  <img class="mb-slide" src="UNAMARKET_POSTING.png" alt="Unamarket creative 1" />
+                  <img class="mb-slide" src="UNAMARKET_POST_2.png" alt="Unamarket creative 2" />
                 </div>
-                <div class="mb-dots" aria-hidden="true">
+                <div class="mb-dots">
                   <span class="mb-dot is-active"></span>
                   <span class="mb-dot"></span>
                 </div>
@@ -208,24 +209,24 @@
             <article class="mb-card">
               <div class="mb-card-top">
                 <h3 class="mb-card-title">Page Posts</h3>
-                <div class="mb-card-controls" aria-label="Carousel controls">
-                  <button class="mb-iconbtn" type="button" data-carousel-prev aria-label="Previous">‹</button>
-                  <button class="mb-iconbtn" type="button" data-carousel-next aria-label="Next">›</button>
+                <div class="mb-card-controls">
+                  <button class="mb-iconbtn" type="button" data-carousel-prev>‹</button>
+                  <button class="mb-iconbtn" type="button" data-carousel-next>›</button>
                 </div>
               </div>
 
-              <!-- Reusing the same pair -->
               <div class="mb-carousel" data-carousel>
                 <div class="mb-track">
-                  <img class="mb-slide" src="UNAMARKET_POSTING.png" alt="Unamarket & Amazon creative 1 duplicate" />
-                  <img class="mb-slide" src="UNAMARKET_POST_2.png" alt="Unamarket & Amazon creative 2 duplicate" />
+                  <img class="mb-slide" src="UNAMARKET_POSTING.png" alt="Unamarket creative 1 duplicate" />
+                  <img class="mb-slide" src="UNAMARKET_POST_2.png" alt="Unamarket creative 2 duplicate" />
                 </div>
-                <div class="mb-dots" aria-hidden="true">
+                <div class="mb-dots">
                   <span class="mb-dot is-active"></span>
                   <span class="mb-dot"></span>
                 </div>
               </div>
             </article>
+
           </div>
         </section>
 
@@ -236,50 +237,6 @@
       </div>
     </section>
   </main>
-
-  <!-- Tiny carousel script -->
-  <script>
-    (function () {
-      const clamp = (n, min, max) => Math.max(min, Math.min(max, n));
-
-      document.querySelectorAll("[data-carousel]").forEach((carousel) => {
-        const track = carousel.querySelector(".mb-track");
-        const slides = Array.from(carousel.querySelectorAll(".mb-slide"));
-        const dots = Array.from(carousel.querySelectorAll(".mb-dot"));
-        const card = carousel.closest(".mb-card");
-
-        let index = 0;
-
-        function go(to) {
-          index = clamp(to, 0, slides.length - 1);
-          const slideWidth = slides[0].getBoundingClientRect().width;
-          track.style.transform = `translateX(${-index * slideWidth}px)`;
-          dots.forEach((d, i) => d.classList.toggle("is-active", i === index));
-        }
-
-        const prev = card.querySelector("[data-carousel-prev]");
-        const next = card.querySelector("[data-carousel-next]");
-
-        prev?.addEventListener("click", () => go(index - 1));
-        next?.addEventListener("click", () => go(index + 1));
-
-        let startX = null;
-        track.addEventListener("pointerdown", (e) => {
-          startX = e.clientX;
-          track.setPointerCapture(e.pointerId);
-        });
-        track.addEventListener("pointerup", (e) => {
-          if (startX == null) return;
-          const dx = e.clientX - startX;
-          startX = null;
-          if (Math.abs(dx) > 40) go(index + (dx < 0 ? 1 : -1));
-        });
-
-        window.addEventListener("resize", () => go(index));
-        go(0);
-      });
-    })();
-  </script>
 
 </body>
 </html>
