--- a/marketing-banners.html
+++ b/marketing-banners.html
@@ -27,18 +27,14 @@
     </div>
   </header>
 
-  <!-- HERO -->
   <main>
+    <!-- HERO -->
     <section class="mb-landing-hero" aria-label="Marketing Designs hero">
       <div class="container mb-landing-hero-inner">
 
         <div class="mb-landing-hero-copy">
           <p class="mb-landing-kicker">SENIOR DESIGNER</p>
-
-          <h1 class="mb-landing-title">
-            Marketing Designs
-          </h1>
-
+          <h1 class="mb-landing-title">Marketing Designs</h1>
           <p class="mb-landing-sub">
             A curated set of campaign creatives designed for clarity, engagement, and brand consistency.
           </p>
@@ -72,49 +68,31 @@
           </header>
 
           <div class="mb-grid">
-
+            <!-- Card 1 -->
             <article class="mb-card">
               <div class="mb-card-top">
                 <h3 class="mb-card-title">Page Posts</h3>
-                <div class="mb-card-controls">
-                  <button class="mb-iconbtn" type="button" data-carousel-prev>‹</button>
-                  <button class="mb-iconbtn" type="button" data-carousel-next>›</button>
-                </div>
               </div>
 
-              <div class="mb-carousel" data-carousel>
-                <div class="mb-track">
-                  <img class="mb-slide" src="EOUK_POSTING.png" alt="Euroffice UK creative 1" />
-                  <img class="mb-slide" src="EOUK_POST_2.png" alt="Euroffice UK creative 2" />
-                </div>
-                <div class="mb-dots">
-                  <span class="mb-dot is-active"></span>
-                  <span class="mb-dot"></span>
+              <div class="mb-carousel">
+                <div class="mb-track" style="grid-auto-columns: 100%;">
+                  <img class="mb-slide" src="EOUK_POSTING.png" alt="Euroffice UK posting set" />
                 </div>
               </div>
             </article>
 
+            <!-- Card 2 -->
             <article class="mb-card">
               <div class="mb-card-top">
                 <h3 class="mb-card-title">Page Posts</h3>
-                <div class="mb-card-controls">
-                  <button class="mb-iconbtn" type="button" data-carousel-prev>‹</button>
-                  <button class="mb-iconbtn" type="button" data-carousel-next>›</button>
-                </div>
               </div>
 
-              <div class="mb-carousel" data-carousel>
-                <div class="mb-track">
-                  <img class="mb-slide" src="EOUK_POSTING.png" alt="Euroffice UK creative 1 duplicate" />
-                  <img class="mb-slide" src="EOUK_POST_2.png" alt="Euroffice UK creative 2 duplicate" />
-                </div>
-                <div class="mb-dots">
-                  <span class="mb-dot is-active"></span>
-                  <span class="mb-dot"></span>
+              <div class="mb-carousel">
+                <div class="mb-track" style="grid-auto-columns: 100%;">
+                  <img class="mb-slide" src="EOUK_POST_2.png" alt="Euroffice UK posting set 2" />
                 </div>
               </div>
             </article>
-
           </div>
         </section>
 
@@ -128,49 +106,31 @@
           </header>
 
           <div class="mb-grid">
-
+            <!-- Card 1 -->
             <article class="mb-card">
               <div class="mb-card-top">
                 <h3 class="mb-card-title">Page Posts</h3>
-                <div class="mb-card-controls">
-                  <button class="mb-iconbtn" type="button" data-carousel-prev>‹</button>
-                  <button class="mb-iconbtn" type="button" data-carousel-next>›</button>
-                </div>
               </div>
 
-              <div class="mb-carousel" data-carousel>
-                <div class="mb-track">
-                  <img class="mb-slide" src="OFFICEPOWER_POSTING.png" alt="Office Power UK creative 1" />
-                  <img class="mb-slide" src="OFFICEPOWER_POST_2.png" alt="Office Power UK creative 2" />
-                </div>
-                <div class="mb-dots">
-                  <span class="mb-dot is-active"></span>
-                  <span class="mb-dot"></span>
+              <div class="mb-carousel">
+                <div class="mb-track" style="grid-auto-columns: 100%;">
+                  <img class="mb-slide" src="OFFICEPOWER_POSTING.png" alt="Office Power UK posting set" />
                 </div>
               </div>
             </article>
 
+            <!-- Card 2 -->
             <article class="mb-card">
               <div class="mb-card-top">
                 <h3 class="mb-card-title">Page Posts</h3>
-                <div class="mb-card-controls">
-                  <button class="mb-iconbtn" type="button" data-carousel-prev>‹</button>
-                  <button class="mb-iconbtn" type="button" data-carousel-next>›</button>
-                </div>
               </div>
 
-              <div class="mb-carousel" data-carousel>
-                <div class="mb-track">
-                  <img class="mb-slide" src="OFFICEPOWER_POSTING.png" alt="Office Power UK creative 1 duplicate" />
-                  <img class="mb-slide" src="OFFICEPOWER_POST_2.png" alt="Office Power UK creative 2 duplicate" />
-                </div>
-                <div class="mb-dots">
-                  <span class="mb-dot is-active"></span>
-                  <span class="mb-dot"></span>
+              <div class="mb-carousel">
+                <div class="mb-track" style="grid-auto-columns: 100%;">
+                  <img class="mb-slide" src="OFFICEPOWER_POST_2.png" alt="Office Power UK posting set 2" />
                 </div>
               </div>
             </article>
-
           </div>
         </section>
 
@@ -184,49 +144,31 @@
           </header>
 
           <div class="mb-grid">
-
+            <!-- Card 1 -->
             <article class="mb-card">
               <div class="mb-card-top">
                 <h3 class="mb-card-title">Page Posts</h3>
-                <div class="mb-card-controls">
-                  <button class="mb-iconbtn" type="button" data-carousel-prev>‹</button>
-                  <button class="mb-iconbtn" type="button" data-carousel-next>›</button>
-                </div>
               </div>
 
-              <div class="mb-carousel" data-carousel>
-                <div class="mb-track">
-                  <img class="mb-slide" src="UNAMARKET_POSTING.png" alt="Unamarket creative 1" />
-                  <img class="mb-slide" src="UNAMARKET_POST_2.png" alt="Unamarket creative 2" />
-                </div>
-                <div class="mb-dots">
-                  <span class="mb-dot is-active"></span>
-                  <span class="mb-dot"></span>
+              <div class="mb-carousel">
+                <div class="mb-track" style="grid-auto-columns: 100%;">
+                  <img class="mb-slide" src="UNAMARKET_POSTING.png" alt="Unamarket & Amazon posting set" />
                 </div>
               </div>
             </article>
 
+            <!-- Card 2 -->
             <article class="mb-card">
               <div class="mb-card-top">
                 <h3 class="mb-card-title">Page Posts</h3>
-                <div class="mb-card-controls">
-                  <button class="mb-iconbtn" type="button" data-carousel-prev>‹</button>
-                  <button class="mb-iconbtn" type="button" data-carousel-next>›</button>
-                </div>
               </div>
 
-              <div class="mb-carousel" data-carousel>
-                <div class="mb-track">
-                  <img class="mb-slide" src="UNAMARKET_POSTING.png" alt="Unamarket creative 1 duplicate" />
-                  <img class="mb-slide" src="UNAMARKET_POST_2.png" alt="Unamarket creative 2 duplicate" />
-                </div>
-                <div class="mb-dots">
-                  <span class="mb-dot is-active"></span>
-                  <span class="mb-dot"></span>
+              <div class="mb-carousel">
+                <div class="mb-track" style="grid-auto-columns: 100%;">
+                  <img class="mb-slide" src="UNAMARKET_POST_2.png" alt="Unamarket & Amazon posting set 2" />
                 </div>
               </div>
             </article>
-
           </div>
         </section>
 
