--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <h3>Social Media Campaign</h3>
         <p>A set of playful, vibrant creatives designed for engagement and clarity.</p>
         <p class="tags">Graphic Design • Social Media</p>
-        <a class="btn-pill" href="#" target="_blank" rel="noopener">View work →</a>
+        <a class="btn-pill" href="https://jujualx.github.io/jjalix/marketing-banners.html" target="_blank" rel="noopener">View work →</a>
       </article>
 
       <!-- Graphic Card 2 -->
